welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value k
while (k! = 6) {
       ^Program:6: error: not found: value k
	k=k+1
        ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (k! = 6) {
^