welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {

while (k! = 6) {
	avance()
	k=k+1
}
}
